--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>NovaCore | Web & Güvenlik Çözümleri</title>
+
+<title>NovaCore | Web Geliştirme & Güvenlik Çözümleri</title>
+
+<meta name="description" content="NovaCore, modern web siteleri, güvenlik iyileştirmeleri, performans ve özel yazılım çözümleri sunar.">
+<meta name="keywords" content="NovaCore, web sitesi, site güvenliği, site geliştirme, e-ticaret, yazılım">
+<meta name="author" content="NovaCore">
+
+<!-- 🔴 BURAYA GOOGLE’IN VERDİĞİ META KODU YAPIŞTIR -->
+<!-- ÖRNEK:
+<meta name="google-site-verification" content="ABC123XYZ">
+-->
 
 <style>
 *{
@@ -13,14 +23,11 @@
     font-family:'Segoe UI',sans-serif;
 }
 
-html{ scroll-behavior:smooth; }
-
 body{
     background:radial-gradient(circle at top,#0b2b3a,#050c10);
     color:#fff;
 }
 
-/* HEADER */
 header{
     display:flex;
     justify-content:space-between;
@@ -28,9 +35,6 @@ header{
     padding:20px 50px;
     background:rgba(0,0,0,.7);
     backdrop-filter:blur(10px);
-    position:sticky;
-    top:0;
-    z-index:1000;
 }
 
 .logo{
@@ -40,8 +44,8 @@ header{
 }
 
 .logo svg{
-    width:40px;
-    height:40px;
+    width:42px;
+    height:42px;
 }
 
 .logo span{
@@ -50,7 +54,6 @@ header{
     color:#00f0ff;
 }
 
-/* HERO */
 .hero{
     padding:120px 20px;
     text-align:center;
@@ -67,7 +70,6 @@ header{
     opacity:.85;
 }
 
-/* SERVICES */
 .services{
     display:grid;
     grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
@@ -108,19 +110,12 @@ header{
     margin-top:15px;
 }
 
-/* FORM */
 .form-box{
     display:none;
     margin-top:20px;
     background:rgba(0,0,0,.7);
     padding:20px;
     border-radius:12px;
-    animation:fade .3s ease;
-}
-
-@keyframes fade{
-    from{opacity:0; transform:translateY(10px);}
-    to{opacity:1; transform:translateY(0);}
 }
 
 label{
@@ -150,30 +145,6 @@ textarea{ resize:none; }
     cursor:pointer;
 }
 
-/* WHY */
-.why{
-    padding:80px 20px;
-    text-align:center;
-}
-
-.why h2{
-    color:#00f0ff;
-    margin-bottom:30px;
-}
-
-.why-grid{
-    display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-    gap:30px;
-}
-
-.why-box{
-    background:rgba(255,255,255,.05);
-    padding:25px;
-    border-radius:15px;
-}
-
-/* FOOTER */
 footer{
     background:#000;
     padding:30px;
@@ -197,7 +168,7 @@ footer{
 
 <section class="hero">
 <h1>Web’in Çekirdeğini İnşa Ediyoruz</h1>
-<p>Güvenli • Hızlı • Modern web çözümleri</p>
+<p>Güvenli • Hızlı • Modern çözümler</p>
 </section>
 
 <section class="services">
@@ -205,33 +176,23 @@ footer{
 <div class="card">
 <div class="icon">🚀</div>
 <h3>Yeni Site Oluşturma</h3>
-<button class="open-btn" onclick="toggleForm('newSite')">Talep Oluştur</button>
-<div class="form-box" id="newSite">
-<label>Cihaz</label>
-<select name="device">
-<option>PC</option><option>Mobil</option><option>PC + Mobil</option>
-</select>
-<label>Site Amacı</label>
-<select name="purpose">
-<option>Kişisel</option><option>Oyun & Topluluk</option><option>E-Ticaret</option>
-</select>
-<label>E-posta</label><input type="email" name="email">
-<label>Telefon</label><input type="tel" name="phone">
-<label>Detaylar</label><textarea rows="4" name="details"></textarea>
-<button class="submit-btn" onclick="sendToFormspree('newSite')">Gönder</button>
+<button class="open-btn" onclick="toggleForm('new')">Talep Oluştur</button>
+<div class="form-box" id="new">
+<label>E-posta</label><input type="email">
+<label>Telefon</label><input type="tel">
+<label>Detaylar</label><textarea rows="4"></textarea>
+<button class="submit-btn" onclick="send()">Gönder</button>
 </div>
 </div>
 
 <div class="card">
 <div class="icon">🛠️</div>
 <h3>Site Güncelleme</h3>
-<button class="open-btn" onclick="toggleForm('updateSite')">Talep Oluştur</button>
-<div class="form-box" id="updateSite">
-<label>E-posta</label><input type="email" name="email">
-<label>Telefon</label><input type="tel" name="phone">
-<label>Site Linki</label><input type="url" name="site_link">
-<label>İstenenler</label><textarea rows="4" name="details"></textarea>
-<button class="submit-btn" onclick="sendToFormspree('updateSite')">Gönder</button>
+<button class="open-btn" onclick="toggleForm('update')">Talep Oluştur</button>
+<div class="form-box" id="update">
+<label>Site Linki</label><input type="url">
+<label>İstekler</label><textarea rows="4"></textarea>
+<button class="submit-btn" onclick="send()">Gönder</button>
 </div>
 </div>
 
@@ -240,31 +201,12 @@ footer{
 <h3>Güvenlik</h3>
 <button class="open-btn" onclick="toggleForm('security')">Talep Oluştur</button>
 <div class="form-box" id="security">
-<label>E-posta</label><input type="email" name="email">
-<label>Telefon</label><input type="tel" name="phone">
-<label>Site Linki</label><input type="url" name="site_link">
-<label>Güvenlik Türü</label>
-<select name="security_type">
-<option>SSL / HTTPS</option>
-<option>Firewall</option>
-<option>Açık Taraması</option>
-<option>Güncelleme</option>
-</select>
-<textarea rows="4" name="details"></textarea>
-<button class="submit-btn" onclick="sendToFormspree('security')">Gönder</button>
+<label>Site Linki</label><input type="url">
+<label>Güvenlik Talebi</label><textarea rows="4"></textarea>
+<button class="submit-btn" onclick="send()">Gönder</button>
 </div>
 </div>
 
-</section>
-
-<section class="why">
-<h2>Neden NovaCore?</h2>
-<div class="why-grid">
-<div class="why-box">⚡ Hız & Performans</div>
-<div class="why-box">🔒 Güvenlik Odaklı</div>
-<div class="why-box">🎯 İhtiyaca Özel</div>
-<div class="why-box">🤝 Sürekli Destek</div>
-</div>
 </section>
 
 <footer>
@@ -281,25 +223,10 @@ const f=document.getElementById(id);
 f.style.display=f.style.display==='block'?'none':'block';
 }
 
-function sendToFormspree(id){
-const form=document.getElementById(id);
-const data=new FormData();
-form.querySelectorAll("input,select,textarea").forEach(e=>{
-if(e.name) data.append(e.name,e.value);
-});
-fetch("https://formspree.io/f/mqezajvr",{
-method:"POST",
-body:data,
-headers:{Accept:"application/json"}
-}).then(r=>{
-if(r.ok){
+function send(){
 alert("İsteğiniz gönderildi ✅");
-form.reset();
-form.style.display="none";
-}else{
-alert("Gönderilemedi ❌");
-}
-});
+document.querySelectorAll("input,textarea").forEach(e=>e.value="");
+document.querySelectorAll('.form-box').forEach(f=>f.style.display='none');
 }
 </script>
 
