--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 <meta name="keywords" content="NovaCore, web sitesi, site güvenliği, site geliştirme, e-ticaret, yazılım">
 <meta name="author" content="NovaCore">
 
-<!-- 🔴 BURAYA GOOGLE’IN VERDİĞİ META KODU YAPIŞTIR -->
-<!-- ÖRNEK:
-<meta name="google-site-verification" content="ABC123XYZ">
--->
+<!-- 🔴 GOOGLE DOĞRULAMA META KODUNUZ -->
+<meta name="google-site-verification" content="Ora1CHuCjG5xPkO4rzivJGokV">
 
 <style>
 *{
@@ -22,12 +20,10 @@
     box-sizing:border-box;
     font-family:'Segoe UI',sans-serif;
 }
-
 body{
     background:radial-gradient(circle at top,#0b2b3a,#050c10);
     color:#fff;
 }
-
 header{
     display:flex;
     justify-content:space-between;
@@ -36,47 +32,39 @@ header{
     background:rgba(0,0,0,.7);
     backdrop-filter:blur(10px);
 }
-
 .logo{
     display:flex;
     align-items:center;
     gap:12px;
 }
-
 .logo svg{
     width:42px;
     height:42px;
 }
-
 .logo span{
     font-size:1.8rem;
     font-weight:bold;
     color:#00f0ff;
 }
-
 .hero{
     padding:120px 20px;
     text-align:center;
 }
-
 .hero h1{
     font-size:3rem;
     color:#00f0ff;
 }
-
 .hero p{
     margin-top:20px;
     font-size:1.2rem;
     opacity:.85;
 }
-
 .services{
     display:grid;
     grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
     gap:40px;
     padding:80px;
 }
-
 .card{
     background:rgba(255,255,255,.06);
     border-radius:20px;
@@ -84,21 +72,17 @@ header{
     box-shadow:0 0 40px rgba(0,240,255,.15);
     transition:.4s;
 }
-
 .card:hover{
     transform:translateY(-12px);
     box-shadow:0 0 60px rgba(0,240,255,.35);
 }
-
 .card h3{
     color:#00f0ff;
     margin:15px 0;
 }
-
 .icon{
     font-size:2.2rem;
 }
-
 .open-btn{
     width:100%;
     padding:12px;
@@ -109,7 +93,6 @@ header{
     cursor:pointer;
     margin-top:15px;
 }
-
 .form-box{
     display:none;
     margin-top:20px;
@@ -117,13 +100,11 @@ header{
     padding:20px;
     border-radius:12px;
 }
-
 label{
     margin-top:10px;
     display:block;
     font-size:.9rem;
 }
-
 input,select,textarea{
     width:100%;
     padding:8px;
@@ -131,9 +112,7 @@ input,select,textarea{
     border:none;
     margin-top:5px;
 }
-
 textarea{ resize:none; }
-
 .submit-btn{
     margin-top:15px;
     width:100%;
@@ -144,7 +123,6 @@ textarea{ resize:none; }
     font-weight:bold;
     cursor:pointer;
 }
-
 footer{
     background:#000;
     padding:30px;
